--- a/src/app/pages/graphics1/graphics1.component.html
+++ b/src/app/pages/graphics1/graphics1.component.html
@@ -1,1 +1,16 @@
-<p>graphics1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-doughnut [title]="graficos.grafico1.leyenda" [data]="graficos.grafico1.data" [labels]="graficos.grafico1.labels"></app-doughnut>
+    </div>
+    <div class="col-6">
+        <app-doughnut [title]="graficos.grafico2.leyenda" [data]="graficos.grafico2.data" [labels]="graficos.grafico2.labels"></app-doughnut>
+    </div>
+</div>
+<div class="row">
+    <div class="col-6">
+        <app-doughnut [title]="graficos.grafico3.leyenda" [data]="graficos.grafico3.data" [labels]="graficos.grafico3.labels"></app-doughnut>
+    </div>
+    <div class="col-6">
+        <app-doughnut [title]="graficos.grafico4.leyenda" [data]="graficos.grafico4.data" [labels]="graficos.grafico4.labels"></app-doughnut>
+    </div>
+</div>
