--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -38,3 +38,10 @@
     position: absolute;
     height: 100%;
 }
+
+#google-btn {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
