--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,8 +8,8 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="imgUrl" alt="user" /><span class="hide-menu">Steave Jobs
-                        </span></a>
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="usuario.imgUrl" alt="user" />
+                        <span class="hide-menu">{{usuario.nombre}}</span></a>
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLink="">My Profile </a></li>
                         <li><a routerLink="">My Balance</a></li>
